[gd_scene load_steps=6 format=2]

[ext_resource path="res://code/pratforms/breakable.gd" type="Script" id=1]
[ext_resource path="res://art/meek_art/platforms/collapsible_small.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.765, 4.35086 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 5, 5, 1 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16.3531, 6.20878 )

[node name="breakable" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 2
motion/sync_to_physics = true
script = ExtResource( 1 )

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2( 0.0387926, -2.42186 )
shape = SubResource( 1 )
one_way_collision = true
one_way_collision_margin = 0.0

[node name="particles" type="Particles2D" parent="."]
position = Vector2( 0, 0.397217 )
emitting = false
amount = 1
one_shot = true
explosiveness = 1.0
process_material = SubResource( 2 )
texture = ExtResource( 2 )

[node name="img" type="Sprite" parent="."]
position = Vector2( 2.76039, 0 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.36805, -1.47221 )
shape = SubResource( 3 )
one_way_collision = true

[node name="timers" type="Node2D" parent="."]

[node name="timer_destroy" type="Timer" parent="timers"]
one_shot = true

[node name="timer_gone" type="Timer" parent="timers"]
wait_time = 0.1
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="timers/timer_destroy" to="." method="_on_timer_destroy_timeout"]
[connection signal="timeout" from="timers/timer_gone" to="." method="_on_timer_gone_timeout"]
